--- a/census/notebook.ipynb
+++ b/census/notebook.ipynb
@@ -162,7 +162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4a4ce7204854a6d95ed81470e8339eb",
+       "model_id": "3a5aa2986d6b427aacdb4504ddd8842c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -493,7 +493,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10a8733558044ba1b7dd5777d79cd25c",
+       "model_id": "e77e0d610a664a33a102c468af8ca16d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -538,24 +538,24 @@
        "      <th>NAME</th>\n",
        "      <th>congressional district</th>\n",
        "      <th>state</th>\n",
-       "      <th>Estimate!!Total:</th>\n",
-       "      <th>Estimate!!Total:!!No schooling completed</th>\n",
-       "      <th>Estimate!!Total:!!Nursery to 4th grade</th>\n",
-       "      <th>Estimate!!Total:!!5th and 6th grade</th>\n",
-       "      <th>Estimate!!Total:!!7th and 8th grade</th>\n",
-       "      <th>Estimate!!Total:!!9th grade</th>\n",
-       "      <th>Estimate!!Total:!!10th grade</th>\n",
+       "      <th>Estimate_Total</th>\n",
+       "      <th>Estimate_Total_NoSchoolingCompleted</th>\n",
+       "      <th>Estimate_Total_NurseryTo4thGrade</th>\n",
+       "      <th>Estimate_Total_5thAnd6thGrade</th>\n",
+       "      <th>Estimate_Total_7thAnd8thGrade</th>\n",
+       "      <th>Estimate_Total_9thGrade</th>\n",
+       "      <th>Estimate_Total_10thGrade</th>\n",
        "      <th>...</th>\n",
-       "      <th>Estimate!!Total:!!12th grade, no diploma</th>\n",
-       "      <th>Estimate!!Total:!!Regular high school diploma</th>\n",
-       "      <th>Estimate!!Total:!!GED or alternative credential</th>\n",
-       "      <th>Estimate!!Total:!!Some college, less than 1 year</th>\n",
-       "      <th>Estimate!!Total:!!Some college, 1 or more years, no degree</th>\n",
-       "      <th>Estimate!!Total:!!Associate's degree</th>\n",
-       "      <th>Estimate!!Total:!!Bachelor's degree</th>\n",
-       "      <th>Estimate!!Total:!!Master's degree</th>\n",
-       "      <th>Estimate!!Total:!!Professional school degree</th>\n",
-       "      <th>Estimate!!Total:!!Doctorate degree</th>\n",
+       "      <th>Estimate_Total_12thGrade,NoDiploma</th>\n",
+       "      <th>Estimate_Total_RegularHighSchoolDiploma</th>\n",
+       "      <th>Estimate_Total_GedOrAlternativeCredential</th>\n",
+       "      <th>Estimate_Total_SomeCollege,LeThan1Year</th>\n",
+       "      <th>Estimate_Total_SomeCollege,1OrMoreYears,NoDegree</th>\n",
+       "      <th>Estimate_Total_Associate'Degree</th>\n",
+       "      <th>Estimate_Total_Bachelor'Degree</th>\n",
+       "      <th>Estimate_Total_Master'Degree</th>\n",
+       "      <th>Estimate_Total_ProfessionalSchoolDegree</th>\n",
+       "      <th>Estimate_Total_DoctorateDegree</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -617,57 +617,49 @@
        "0   Congressional District 3 (116th Congress), California   \n",
        "1  Congressional District 21 (116th Congress), California   \n",
        "\n",
-       "  congressional district state Estimate!!Total:  \\\n",
-       "0                     03    06           492041   \n",
-       "1                     21    06           424849   \n",
+       "  congressional district state Estimate_Total  \\\n",
+       "0                     03    06         492041   \n",
+       "1                     21    06         424849   \n",
        "\n",
-       "  Estimate!!Total:!!No schooling completed  \\\n",
-       "0                                     9757   \n",
-       "1                                    21911   \n",
+       "  Estimate_Total_NoSchoolingCompleted Estimate_Total_NurseryTo4thGrade  \\\n",
+       "0                                9757                             5077   \n",
+       "1                               21911                            21062   \n",
        "\n",
-       "  Estimate!!Total:!!Nursery to 4th grade Estimate!!Total:!!5th and 6th grade  \\\n",
-       "0                                   5077                               12445   \n",
-       "1                                  21062                               39352   \n",
+       "  Estimate_Total_5thAnd6thGrade Estimate_Total_7thAnd8thGrade  \\\n",
+       "0                         12445                          5491   \n",
+       "1                         39352                         15217   \n",
        "\n",
-       "  Estimate!!Total:!!7th and 8th grade Estimate!!Total:!!9th grade  \\\n",
-       "0                                5491                        5655   \n",
-       "1                               15217                       20351   \n",
+       "  Estimate_Total_9thGrade Estimate_Total_10thGrade  ...  \\\n",
+       "0                    5655                     5461  ...   \n",
+       "1                   20351                    12229  ...   \n",
        "\n",
-       "  Estimate!!Total:!!10th grade  ... Estimate!!Total:!!12th grade, no diploma  \\\n",
-       "0                         5461  ...                                    11891   \n",
-       "1                        12229  ...                                    15204   \n",
+       "  Estimate_Total_12thGrade,NoDiploma Estimate_Total_RegularHighSchoolDiploma  \\\n",
+       "0                              11891                                  105373   \n",
+       "1                              15204                                   98332   \n",
        "\n",
-       "  Estimate!!Total:!!Regular high school diploma  \\\n",
-       "0                                        105373   \n",
-       "1                                         98332   \n",
+       "  Estimate_Total_GedOrAlternativeCredential  \\\n",
+       "0                                     13456   \n",
+       "1                                     13409   \n",
        "\n",
-       "  Estimate!!Total:!!GED or alternative credential  \\\n",
-       "0                                           13456   \n",
-       "1                                           13409   \n",
+       "  Estimate_Total_SomeCollege,LeThan1Year  \\\n",
+       "0                                  36042   \n",
+       "1                                  23653   \n",
        "\n",
-       "  Estimate!!Total:!!Some college, less than 1 year  \\\n",
-       "0                                            36042   \n",
-       "1                                            23653   \n",
+       "  Estimate_Total_SomeCollege,1OrMoreYears,NoDegree  \\\n",
+       "0                                            86013   \n",
+       "1                                            59324   \n",
        "\n",
-       "  Estimate!!Total:!!Some college, 1 or more years, no degree  \\\n",
-       "0                                                      86013   \n",
-       "1                                                      59324   \n",
+       "  Estimate_Total_Associate'Degree Estimate_Total_Bachelor'Degree  \\\n",
+       "0                           50948                          83536   \n",
+       "1                           24457                          32602   \n",
        "\n",
-       "  Estimate!!Total:!!Associate's degree Estimate!!Total:!!Bachelor's degree  \\\n",
-       "0                                50948                               83536   \n",
-       "1                                24457                               32602   \n",
+       "  Estimate_Total_Master'Degree Estimate_Total_ProfessionalSchoolDegree  \\\n",
+       "0                        34271                                    9976   \n",
+       "1                         8271                                    3547   \n",
        "\n",
-       "  Estimate!!Total:!!Master's degree  \\\n",
-       "0                             34271   \n",
-       "1                              8271   \n",
-       "\n",
-       "  Estimate!!Total:!!Professional school degree  \\\n",
-       "0                                         9976   \n",
-       "1                                         3547   \n",
-       "\n",
-       "  Estimate!!Total:!!Doctorate degree  \n",
-       "0                               6172  \n",
-       "1                                889  \n",
+       "  Estimate_Total_DoctorateDegree  \n",
+       "0                           6172  \n",
+       "1                            889  \n",
        "\n",
        "[2 rows x 21 columns]"
       ]
@@ -688,26 +680,6 @@
    "outputs": [],
    "source": [
     "educData['pctNoHs'] = educData.C15003_0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['C15003_001E', 'C15003_001EA', 'C15003_001M', 'C15003_001MA', 'C15003_002E', 'C15003_002EA', 'C15003_002M', 'C15003_002MA', 'C15003_003E', 'C15003_003EA', 'C15003_003M', 'C15003_003MA', 'C15003_004E', 'C15003_004EA', 'C15003_004M', 'C15003_004MA', 'C15003_005E', 'C15003_005EA', 'C15003_005M', 'C15003_005MA', 'C15003_006E', 'C15003_006EA', 'C15003_006M', 'C15003_006MA', 'C15003_007E', 'C15003_007EA', 'C15003_007M', 'C15003_007MA', 'C15003_008E', 'C15003_008EA', 'C15003_008M', 'C15003_008MA', 'C15003_009E', 'C15003_009EA', 'C15003_009M', 'C15003_009MA', 'C15003_010E', 'C15003_010EA', 'C15003_010M', 'C15003_010MA', 'C15003_011E', 'C15003_011EA', 'C15003_011M', 'C15003_011MA', 'C15003_012E', 'C15003_012EA', 'C15003_012M', 'C15003_012MA', 'C15003_013E', 'C15003_013EA', 'C15003_013M', 'C15003_013MA', 'C15003_014E', 'C15003_014EA', 'C15003_014M', 'C15003_014MA', 'C15003_015E', 'C15003_015EA', 'C15003_015M', 'C15003_015MA', 'C15003_016E', 'C15003_016EA', 'C15003_016M', 'C15003_016MA', 'C15003_017E', 'C15003_017EA', 'C15003_017M', 'C15003_017MA', 'C15003_018E', 'C15003_018EA', 'C15003_018M', 'C15003_018MA', 'B28010_001E', 'B28010_001EA', 'B28010_001M', 'B28010_001MA', 'B28010_002E', 'B28010_002EA', 'B28010_002M', 'B28010_002MA', 'B28010_003E', 'B28010_003EA', 'B28010_003M', 'B28010_003MA', 'B28010_004E', 'B28010_004EA', 'B28010_004M', 'B28010_004MA', 'B28010_005E', 'B28010_005EA', 'B28010_005M', 'B28010_005MA', 'B28010_006E', 'B28010_006EA', 'B28010_006M', 'B28010_006MA', 'B28010_007E', 'B28010_007EA', 'B28010_007M', 'B28010_007MA', 'B28003_001E', 'B28003_001EA', 'B28003_001M', 'B28003_001MA', 'B28003_002E', 'B28003_002EA', 'B28003_002M', 'B28003_002MA', 'B28003_003E', 'B28003_003EA', 'B28003_003M', 'B28003_003MA', 'B28003_004E', 'B28003_004EA', 'B28003_004M', 'B28003_004MA', 'B28003_005E', 'B28003_005EA', 'B28003_005M', 'B28003_005MA', 'B28003_006E', 'B28003_006EA', 'B28003_006M', 'B28003_006MA', 'B28006_001E', 'B28006_001EA', 'B28006_001M', 'B28006_001MA', 'B28006_002E', 'B28006_002EA', 'B28006_002M', 'B28006_002MA', 'B28006_003E', 'B28006_003EA', 'B28006_003M', 'B28006_003MA', 'B28006_004E', 'B28006_004EA', 'B28006_004M', 'B28006_004MA', 'B28006_005E', 'B28006_005EA', 'B28006_005M', 'B28006_005MA', 'B28006_006E', 'B28006_006EA', 'B28006_006M', 'B28006_006MA', 'B28006_007E', 'B28006_007EA', 'B28006_007M', 'B28006_007MA', 'B28006_008E', 'B28006_008EA', 'B28006_008M', 'B28006_008MA', 'B28006_009E', 'B28006_009EA', 'B28006_009M', 'B28006_009MA', 'B28006_010E', 'B28006_010EA', 'B28006_010M', 'B28006_010MA', 'B28006_011E', 'B28006_011EA', 'B28006_011M', 'B28006_011MA', 'B28006_012E', 'B28006_012EA', 'B28006_012M', 'B28006_012MA', 'B28006_013E', 'B28006_013EA', 'B28006_013M', 'B28006_013MA', 'B28006_014E', 'B28006_014EA', 'B28006_014M', 'B28006_014MA', 'B28006_015E', 'B28006_015EA', 'B28006_015M', 'B28006_015MA', 'B28006_016E', 'B28006_016EA', 'B28006_016M', 'B28006_016MA', 'B28006_017E', 'B28006_017EA', 'B28006_017M', 'B28006_017MA', 'B28006_018E', 'B28006_018EA', 'B28006_018M', 'B28006_018MA', 'B28006_019E', 'B28006_019EA', 'B28006_019M', 'B28006_019MA', 'B23025_001E', 'B23025_001EA', 'B23025_001M', 'B23025_001MA', 'B23025_002E', 'B23025_002EA', 'B23025_002M', 'B23025_002MA', 'B23025_003E', 'B23025_003EA', 'B23025_003M', 'B23025_003MA', 'B23025_004E', 'B23025_004EA', 'B23025_004M', 'B23025_004MA', 'B23025_005E', 'B23025_005EA', 'B23025_005M', 'B23025_005MA', 'B23025_006E', 'B23025_006EA', 'B23025_006M', 'B23025_006MA', 'B23025_007E', 'B23025_007EA', 'B23025_007M', 'B23025_007MA', 'B27011_001E', 'B27011_001EA', 'B27011_001M', 'B27011_001MA', 'B27011_002E', 'B27011_002EA', 'B27011_002M', 'B27011_002MA', 'B27011_003E', 'B27011_003EA', 'B27011_003M', 'B27011_003MA', 'B27011_004E', 'B27011_004EA', 'B27011_004M', 'B27011_004MA', 'B27011_005E', 'B27011_005EA', 'B27011_005M', 'B27011_005MA', 'B27011_006E', 'B27011_006EA', 'B27011_006M', 'B27011_006MA', 'B27011_007E', 'B27011_007EA', 'B27011_007M', 'B27011_007MA', 'B27011_008E', 'B27011_008EA', 'B27011_008M', 'B27011_008MA', 'B27011_009E', 'B27011_009EA', 'B27011_009M', 'B27011_009MA', 'B27011_010E', 'B27011_010EA', 'B27011_010M', 'B27011_010MA', 'B27011_011E', 'B27011_011EA', 'B27011_011M', 'B27011_011MA', 'B27011_012E', 'B27011_012EA', 'B27011_012M', 'B27011_012MA', 'B27011_013E', 'B27011_013EA', 'B27011_013M', 'B27011_013MA', 'B27011_014E', 'B27011_014EA', 'B27011_014M', 'B27011_014MA', 'B27011_015E', 'B27011_015EA', 'B27011_015M', 'B27011_015MA', 'B27011_016E', 'B27011_016EA', 'B27011_016M', 'B27011_016MA', 'B27011_017E', 'B27011_017EA', 'B27011_017M', 'B27011_017MA'])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.variables."
    ]
   },
   {
