--- a/census/notebook.ipynb
+++ b/census/notebook.ipynb
@@ -162,7 +162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a5aa2986d6b427aacdb4504ddd8842c",
+       "model_id": "b9510ae51dde4ae6a6c30f873f41e5f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -493,7 +493,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e77e0d610a664a33a102c468af8ca16d",
+       "model_id": "d1e820ed12784c2cb31cea2703f0d1c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -679,7 +679,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "educData['pctNoHs'] = educData.C15003_0"
+    "educData['pctNoHs'] = educData.Estimate_Total_NoSchoolingCompleted \\\n",
+    "                    + educData.Estimate_Total_NurseryTo4thGrade \\\n",
+    "                    + educData.Estimate_Total_5thAnd6thGrade \\\n",
+    "                    + educData.Estimate_Total_7thAnd8thGrade \\\n",
+    "                    + educData.Estimate_Total_9thGrade \\\n",
+    "                    + educData.Estimate_Total_10thGrade \\\n",
+    "                    + educData.Estimate_Total_11thGrade \\\n",
+    "                    + educData.Estimate_Total_12tyGrde"
    ]
   },
   {
