--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "568b5836294d43e3aeb8f5cfc84aa7e6",
+       "model_id": "8b82b74d95784e2dae6ea2a8f92e0700",
        "version_major": 2,
        "version_minor": 0
       },
@@ -146,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0063795bd71b48bb93b0f4899905811c",
+       "model_id": "9c48bb3c835644638a4446938b279c02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c692ce3fa89e4844a08f7ac48cfad4cc",
+       "model_id": "db39b1fb7f8d4059bd055d0b5edf2d24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69138bbe9c6142df9988eabd129db334",
+       "model_id": "9bceb35f928b4a8da3e7bd50355372c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -188,7 +188,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66e7e815cb594ccbb8722bc3fd094745",
+       "model_id": "b9d20ca003484675b390c03893767f05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -209,13 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = c.getSupportedGeographies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7251316d8d0949098ec10e349587a400",
+       "model_id": "a78b02f944f44b769a7cecb7f1055218",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,11 +234,29 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "InvalidQueryException",
+     "evalue": "Could not make query for route `?get=NAME,C15003_001E,C15003_001EA,C15003_001M,C15003_001MA,C15003_002E,C15003_002EA,C15003_002M,C15003_002MA,C15003_003E,C15003_003EA,C15003_003M,C15003_003MA,C15003_004E,C15003_004EA,C15003_004M,C15003_004MA,C15003_005E,C15003_005EA,C15003_005M,C15003_005MA,C15003_006E,C15003_006EA,C15003_006M,C15003_006MA,C15003_007E,C15003_007EA,C15003_007M,C15003_007MA,C15003_008E,C15003_008EA,C15003_008M,C15003_008MA,C15003_009E,C15003_009EA,C15003_009M,C15003_009MA,C15003_010E,C15003_010EA,C15003_010M,C15003_010MA,C15003_011E,C15003_011EA,C15003_011M,C15003_011MA,C15003_012E,C15003_012EA,C15003_012M,C15003_012MA,C15003_013E&for=congressional%20district:*&in=state:*&in=True`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInvalidQueryException\u001b[0m                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-d9ec119cd2df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0meducData\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetStats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meducVars\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'code'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGeoDomain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msupportedGeographies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCongressionalDistrict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGeoDomain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msupportedGeographies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mState\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreplaceColumnHeaders\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0memplData\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetStats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memplVars\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'code'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGeoDomain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msupportedGeographies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCongressionalDistrict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGeoDomain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msupportedGeographies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mState\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreplaceColumnHeaders\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/src/us-stats/census/client/census.py\u001b[0m in \u001b[0;36mgetStats\u001b[0;34m(self, variablesToQuery, forDomain, inDomains, replaceColumnHeaders)\u001b[0m\n\u001b[1;32m    168\u001b[0m             \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    169\u001b[0m         \"\"\"\n\u001b[0;32m--> 170\u001b[0;31m         return self._stats.getStats(\n\u001b[0m\u001b[1;32m    171\u001b[0m             \u001b[0mvariablesToQuery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforDomain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minDomains\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreplaceColumnHeaders\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    172\u001b[0m         )\n",
+      "\u001b[0;32m~/src/us-stats/census/utils/timer.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mstartTime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mperf_counter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mretval\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mendTime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mperf_counter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/src/us-stats/census/stats/service.py\u001b[0m in \u001b[0;36mgetStats\u001b[0;34m(self, variablesToQuery, forDomain, replaceColumnHeaders, *inDomains)\u001b[0m\n\u001b[1;32m     38\u001b[0m     ) -> pd.DataFrame:\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m         return self.__getStats(\n\u001b[0m\u001b[1;32m     41\u001b[0m             \u001b[0mvariablesToQuery\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgetUnique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvariablesToQuery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0mforDomain\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mforDomain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/src/us-stats/census/stats/service.py\u001b[0m in \u001b[0;36m__getStats\u001b[0;34m(self, variablesToQuery, forDomain, inDomains, replaceColumnHeaders)\u001b[0m\n\u001b[1;32m     58\u001b[0m         )\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m         \u001b[0mapiResults\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mres\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mres\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpullStats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m         columnHeaders, typeConversions = self._getVariableNamesAndTypeConversions(\n",
+      "\u001b[0;32m~/src/us-stats/census/stats/service.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     58\u001b[0m         )\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m         \u001b[0mapiResults\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mres\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mres\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpullStats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m         columnHeaders, typeConversions = self._getVariableNamesAndTypeConversions(\n",
+      "\u001b[0;32m~/src/us-stats/census/api/fetch.py\u001b[0m in \u001b[0;36mstats\u001b[0;34m(self, variablesCodes, forDomain, inDomains)\u001b[0m\n\u001b[1;32m    114\u001b[0m             \u001b[0;31m# no real good way to do it down here)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 116\u001b[0;31m             \u001b[0;32myield\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__fetch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muriRoute\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    117\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__fetch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mroute\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mAny\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/src/us-stats/census/api/fetch.py\u001b[0m in \u001b[0;36m__fetch\u001b[0;34m(self, route)\u001b[0m\n\u001b[1;32m    120\u001b[0m         \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus_code\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m400\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m404\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 122\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mInvalidQueryException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Could not make query for route `{route}`\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    123\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mInvalidQueryException\u001b[0m: Could not make query for route `?get=NAME,C15003_001E,C15003_001EA,C15003_001M,C15003_001MA,C15003_002E,C15003_002EA,C15003_002M,C15003_002MA,C15003_003E,C15003_003EA,C15003_003M,C15003_003MA,C15003_004E,C15003_004EA,C15003_004M,C15003_004MA,C15003_005E,C15003_005EA,C15003_005M,C15003_005MA,C15003_006E,C15003_006EA,C15003_006M,C15003_006MA,C15003_007E,C15003_007EA,C15003_007M,C15003_007MA,C15003_008E,C15003_008EA,C15003_008M,C15003_008MA,C15003_009E,C15003_009EA,C15003_009M,C15003_009MA,C15003_010E,C15003_010EA,C15003_010M,C15003_010MA,C15003_011E,C15003_011EA,C15003_011M,C15003_011MA,C15003_012E,C15003_012EA,C15003_012M,C15003_012MA,C15003_013E&for=congressional%20district:*&in=state:*&in=True`"
+     ]
     }
    ],
    "source": [
-    "educData = c.getStats(educVars['code'].tolist(), GeoDomain('congressional district'), [GeoDomain('state')], replaceColumnHeaders=True)\n",
-    "emplData = c.getStats(emplVars['code'].tolist(), GeoDomain('congressional district'), )"
+    "educData = c.getStats(educVars['code'].tolist(), GeoDomain(c.supportedGeographies.CongressionalDistrict), GeoDomain(c.supportedGeographies.State), replaceColumnHeaders=True)\n",
+    "emplData = c.getStats(emplVars['code'].tolist(), GeoDomain(c.supportedGeographies.CongressionalDistrict), GeoDomain(c.supportedGeographies.State), replaceColumnHeaders=True)"
    ]
   },
   {
