--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -11,58 +11,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     year                                               name  \\\n",
-      "0    2020    2020 Planning Database - State and County Level   \n",
-      "1    2020     Decennial Census: Decennial Self-Response Rate   \n",
-      "2    2020                Planning Database Block Group Level   \n",
-      "3    2020                     Planning Database: Tract Level   \n",
-      "4    2019  American Community Survey: 1-Year Estimates: C...   \n",
-      "..    ...                                                ...   \n",
-      "476  1990  1990 Population Estimates - 1990-2000 Intercen...   \n",
-      "477  1989   1989 County Business Patterns: Business Patterns   \n",
-      "478  1988   1988 County Business Patterns: Business Patterns   \n",
-      "479  1987   1987 County Business Patterns: Business Patterns   \n",
-      "480  1986   1986 County Business Patterns: Business Patterns   \n",
-      "\n",
-      "                                           description datasetType  \\\n",
-      "0    This is a one-time release of the Census Burea...         pdb   \n",
-      "1                  Daily Decennial Self-Response Rates         dec   \n",
-      "2    The PDB is a database of U.S. housing, demogra...         pdb   \n",
-      "3    The PDB is a database of U.S. housing, demogra...         pdb   \n",
-      "4    The American Community Survey (ACS) is an ongo...         acs   \n",
-      "..                                                 ...         ...   \n",
-      "476  Monthly Intercensal Estimates of the Resident ...         pep   \n",
-      "477  County Business Patterns (CBP) is an annual se...         cbp   \n",
-      "478  County Business Patterns (CBP) is an annual se...         cbp   \n",
-      "479  County Business Patterns (CBP) is an annual se...         cbp   \n",
-      "480  County Business Patterns (CBP) is an annual se...         cbp   \n",
-      "\n",
-      "        surveyType  \n",
-      "0      statecounty  \n",
-      "1     responserate  \n",
-      "2       blockgroup  \n",
-      "3            tract  \n",
-      "4    acs1/cprofile  \n",
-      "..             ...  \n",
-      "476  int_natresafo  \n",
-      "477                 \n",
-      "478                 \n",
-      "479                 \n",
-      "480                 \n",
-      "\n",
-      "[481 rows x 5 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from census import getCensus"
+    "from census import getCensus, GeoDomain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = getCensus(year=2019,\n",
+    "              datasetType='acs',\n",
+    "              surveyType='acs1',\n",
+    "              shouldCacheOnDisk=True,\n",
+    "              shouldLoadFromExistingCache=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = c.getGroups()"
    ]
   },
   {
